modules/tile-stack/tile-stack.module.less
.tile-stack {
  margin-bottom: 10px;
  min-width: 320px;
  margin: 0 auto;
  height: auto;
  &-items{
    display:block;
  }
  &-item {
    height: 180px;
    width:100%;
    background-size: cover;
    background-position: center top;
    background-repeat: no-repeat;
    border-bottom: 1px solid @fontIconGrey;
    div:last-child{
      border-bottom: none;
    }
    &:hover{
      box-shadow: inset 0 0 0 1000px @masterImageHover;
    }
    .col-xs-12;
    &-text {
      text-align: center;
      position: relative;
      top:50%;
      transform: translate(0,-50%);
      margin: 0px 10px;
      line-height: 1.2em;
      .globalDefaultModFont(24px, 400, @white);
    }
  }
}
@media @tablet {
  .tile-stack {
    width: 100%;
    max-width: 1086px;
    height: 141px;
    margin: 0 auto;
    &-items{
      height:100%;
      width:33%;
      float:left;
    }
    &-item {
      height: 100%;
      border-bottom: none;
      border-right: 1px solid #444;
      position: relative;
      min-height: 1px;
      padding-left: 0;
      padding-right: 0;
      float: left;
      width: 100%;
      &-text {
        font-size: 18px;
      }
    }
  }
}

@media @desktop-l {
  .tile-stack {
    height: 220px;
    margin-left:3px;
    &-item {
      &-text {
        font-size:20px;
      }
    }
  }
}

